--- a/index.html
+++ b/index.html
@@ -16,23 +16,40 @@
   <body>
     <div class="container">
       <header class="header">
-        <a href="#">
-          <img src="./images/icons/logo.svg" class="logo" alt="Логотип" />
+        <a href="#" class="link-logo">
+          <img
+            src="./images/icons/icon-notetx.svg"
+            class="logo"
+            alt="Логотип"
+          />
+          <span class="link-logo__text">Candleaf</span>
         </a>
-        <nav>
-          <ul class="menu">
-            <li class="menu__item menu__item_sub">
-              <a class="menu__link">Discovery <span>&#8250;</span></a>
-              <ul class="sub-menu">
-                <li class="sub-menu__item"><a> item 1 </a></li>
-                <li class="sub-menu__item"><a> item 2 </a></li>
-                <li class="sub-menu__item"><a> item 3 </a></li>
-                <li class="sub-menu__item"><a> item 4 </a></li>
-              </ul>
-            </li>
-            <li class="menu__item"><a class="menu__link">About</a></li>
-            <li class="menu__item"><a class="menu__link">Contact us</a></li>
-          </ul>
+        <nav class="nav">
+          <div class="menu">
+            <input
+              type="checkbox"
+              id="burger-checkbox"
+              class="burger-checkbox"
+            />
+            <label for="burger-checkbox" class="burger"></label>
+            <ul class="menu-list">
+              <li class="menu-list__item menu-list__item_sub">
+                <a class="menu-list__link">Discovery <span>&#8250;</span></a>
+                <ul class="sub-menu">
+                  <li class="sub-menu__item"><a> item 1 </a></li>
+                  <li class="sub-menu__item"><a> item 2 </a></li>
+                  <li class="sub-menu__item"><a> item 3 </a></li>
+                  <li class="sub-menu__item"><a> item 4 </a></li>
+                </ul>
+              </li>
+              <li class="menu-list__item">
+                <a class="menu-list__link">About</a>
+              </li>
+              <li class="menu-list__item">
+                <a class="menu-list__link">Contact us</a>
+              </li>
+            </ul>
+          </div>
         </nav>
         <ul class="icon-list">
           <li class="icon-list__item">
@@ -173,10 +190,10 @@
                 Hyphoallergenic: 100% natural, human friendly ingredients
               </li>
               <li class="list-detail__item">
-                Handmade: All candles are craftly made with love.
+                Handmade: All candles are craftly made with&#160;love.
               </li>
               <li class="list-detail__item">
-                Long burning: No more waste. Created for last long.
+                Long burning: No more waste. Created for last&#160;long.
               </li>
             </ul>
             <a href="#" class="button detail__button">Learn more</a>
@@ -313,60 +330,65 @@
       </main>
       <footer class="footer">
         <div class="footer__wrapper">
-        <div class="footer__wrapper-text">
-          <img src="./images/icons/logo-footer.svg" alt="Логотип" class="logo-footer"/>
-          <p class="footer__text">
-            Your natural candle made for your home and for your wellness.
-          </p>
-        </div>
-        <div class="footer__wrapper-nav">
-          <nav>
-            <h3 class="footer__nav-title">Discovery</h3>
-            <ul class="footer__nav-links">
-              <li>
-                <a href="#" class="footer__nav-link">New season</a>
-              </li>
-              <li>
-                <a href="#" class="footer__nav-link">Most searched</a>
-              </li>
-              <li>
-                <a href="#" class="footer__nav-link">Most selled</a>
-              </li>
-            </ul>
-          </nav>
+          <div class="footer__wrapper-text">
+            <img
+              src="./images/icons/logo-footer.svg"
+              alt="Логотип"
+              class="logo-footer"
+            />
+            <p class="footer__text">
+              Your natural candle made for your home and for your wellness.
+            </p>
+          </div>
+          <div class="footer__wrapper-nav">
+            <nav>
+              <h3 class="footer__nav-title">Discovery</h3>
+              <ul class="footer__nav-links">
+                <li>
+                  <a href="#" class="footer__nav-link">New season</a>
+                </li>
+                <li>
+                  <a href="#" class="footer__nav-link">Most searched</a>
+                </li>
+                <li>
+                  <a href="#" class="footer__nav-link">Most selled</a>
+                </li>
+              </ul>
+            </nav>
 
-          <nav>
-            <h3 class="footer__nav-title">About</h3>
-            <ul class="footer__nav-links">
-              <li>
-                <a href="#" class="footer__nav-link">Help</a>
-              </li>
-              <li>
-                <a href="#" class="footer__nav-link">Shipping</a>
-              </li>
-              <li>
-                <a href="#" class="footer__nav-link">Affiliate</a>
-              </li>
-            </ul>
-          </nav>
+            <nav>
+              <h3 class="footer__nav-title">About</h3>
+              <ul class="footer__nav-links">
+                <li>
+                  <a href="#" class="footer__nav-link">Help</a>
+                </li>
+                <li>
+                  <a href="#" class="footer__nav-link">Shipping</a>
+                </li>
+                <li>
+                  <a href="#" class="footer__nav-link">Affiliate</a>
+                </li>
+              </ul>
+            </nav>
 
-          <nav>
-            <h3 class="footer__nav-title">Info</h3>
-            <ul class="footer__nav-links">
-              <li>
-                <a href="#" class="footer__nav-link">Contact us</a>
-              </li>
-              <li>
-                <a href="#" class="footer__nav-link">Privacy Policies</a>
-              </li>
-              <li>
-                <a href="#" class="footer__nav-link">Terms & Conditions</a>
-              </li>
-            </ul>
-          </nav>
+            <nav>
+              <h3 class="footer__nav-title">Info</h3>
+              <ul class="footer__nav-links">
+                <li>
+                  <a href="#" class="footer__nav-link">Contact us</a>
+                </li>
+                <li>
+                  <a href="#" class="footer__nav-link">Privacy Policies</a>
+                </li>
+                <li>
+                  <a href="#" class="footer__nav-link">Terms & Conditions</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
         </div>
-      </div>
       </footer>
     </div>
+    <script src="./script/script.js"></script>
   </body>
 </html>
